70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/8d5d2c0f-5447-4ad5-889b-75e5d7a3a35f/Goal/kubernates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress-aa7098b5-0f03-4f41-bb10-db9a919a52eb
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: rest-app-aa7098b5-0f03-4f41-bb10-db9a919a52eb
spec:
  ingressClassName: nginx
  rules:
    - host: goal-4bfo6f.73b9nq.us-east-2.febe.kbs
      http:
        paths:
          - path: /febe-rest-aa7098b5-0f03-4f41-bb10-db9a919a52eb/
            pathType: Prefix
            backend:
              service:
                name: rest-service-aa7098b5-0f03-4f41-bb10-db9a919a52eb
                port:
                  number: 80
